[package]
name = "last_order"
version = "0.1.2"
edition = "2021"
authors = ["HBSpy"]
license = "MIT"
repository = "https://github.com/HBSpy/last_order"
description = "A Rust library for managing network devices."

[dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.11"
ssh2 = "0.9"

[dev-dependencies]
env_logger = "0.11"
