[package]
name = "last_order"
version = "0.1.3"
edition = "2021"
authors = ["HBSpy"]
license = "MIT"
repository = "https://github.com/HBSpy/last_order"
description = "A Rust library for managing network devices."

[dependencies]
log = "0.4"
regex = "1.11"
ssh2 = "0.9"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
